finished html-css part 2

--- a/html-css-2/index-2.html
+++ b/html-css-2/index-2.html
@@ -41,15 +41,16 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="box3-container">
         <h2>Everything</h2>
         <div class="box3">
             <div class="square">
                 <div class="green-circle">
                     <div class="brown-square">
                         <div class="blue-circle">
-                            <img class="fish-img"/>
+                            <img class="fish-img" src="fish.png"/>
                         </div>
+                        <p>Fish Tank</p>
                     </div>
                 </div>
             </div>
